--- a/assets/html/aboutUs.html
+++ b/assets/html/aboutUs.html
@@ -4,8 +4,97 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/aboutUs.css" />
+    <title>JoongoBooks란?</title>
   </head>
 
-  <body></body>
+  <body>
+    <header class="navbar">
+      <nav>
+        <div class="nav-container">
+          <a href="/index.html">
+            <img class="book" src="../img/books.png" alt="logo" />
+          </a>
+          <div class="menu-container">
+            <!-- login 관련 메뉴 -->
+            <ul class="menu">
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+            </ul>
+            <ul class="menu before">
+            </ul>
+            <!-- // login 관련 메뉴 -->
+            <ul class="menu2">
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
+            </ul>
+            <ul class="dropdown-menu">
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="side-menu">
+      <ul class="project">
+        <h2>프로젝트 기획</h2>
+        <ul class="menu-list">
+          <li class="present">
+            <a href="../html/aboutUs.html">JoongoBooks란?</a>
+          </li>
+          <li>
+            <a href="../html/joongoReaders.html">Joongo-Readers 소개</a>
+          </li>
+        </ul>
+      </ul>
+      <ul class="questions">
+        <a class="questions" href="../html/fan.html">F&A</a>
+      </ul>
+      <ul class="ask">
+        <h2>1:1 문의하기</h2>
+        <ul class="menu-list">
+            <li>
+              <a href="../html/userReport.html">불량 판매자 신고</a>
+            </li>
+            <li>
+              <a href="../html/complain.html">이용 불편 사항 신고</a>
+            </li>
+          </ul>
+        </ul>
+      </ul>
+      <ul class="side-dropdown-menu">
+        <h4>프로젝트 기획</h4>
+        <li class="present"><a href="./About Us.html">JoongoBooks란?</a></li>
+        <li><a href="./joongoReaders.html">Joongo-Readers 소개</a></li>
+        <a href="./fna.html">F&A</a>
+        <h4>1:1 문의하기</h4>
+        <li><a href="./report.html">불량 판매자 신고</a></li>
+        <li>
+          <a href="./complain.html">이용 불편 사항 신고</a>
+        </li>
+      </ul>
+    </div>
+    <div class="joongobooks">
+      <h2 class="joongo">JoongoBooks란?</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, fuga libero. Velit, quis ipsa ex assumenda voluptatem eligendi dolor eum accusantium asperiores nobis maiores labore porro repellendus quaerat ut placeat.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore mollitia nemo velit iusto eaque, minus odit minima magni asperiores dolorum reiciendis sequi blanditiis obcaecati vitae perferendis quis. Expedita, aperiam facilis.lorem
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam porro reiciendis dolores aliquam eligendi nam ex modi, distinctio laudantium et cum sed mollitia amet illo quis magnam est veritatis doloremque!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique autem doloribus saepe nisi! Accusamus atque officiis error, in cum voluptas architecto distinctio exercitationem quo fugiat possimus. Nesciunt, quos commodi?
+      </p>
+    </div>
+    <footer class="footer">
+      <p>&copy; 2023, joongo-readers. All rights reserved.</p>
+    </footer>
+    <script src="../js/authorized.js"></script>
+  </body>
 </html>
