--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/changePassword.css" />
     <title>비밀번호 변경</title>
   </head>
@@ -12,33 +13,33 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/Home.html">
+          <a href="/index.html">
             <img class="book" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
+            <!-- login 관련 메뉴 -->
             <ul class="menu">
-              <li><img class="user" src="../img/user.png" alt="user" /></li>
-              <ul class="menu1">
-                <li>[별명]님, 환영합니다.</li>
-                <li><a href="../html/My Page.html">My Page</a></li>
-                <li><a href="../html/Home.html">Logout</a></li>
-              </ul>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
+            <ul class="menu before">
+            </ul>
+            <!-- // login 관련 메뉴 -->
             <ul class="menu2">
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="../css/My Page.css">My Page</a></li>
-              <li><a href="./Home.html">Logout</a></li>
-              <li><a href="../html/Home.html">Home</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+              <li><a href="/index.html">Home</a></li>
               <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
@@ -48,39 +49,51 @@
       <ul class="profile">
         <h2>Profile</h2>
         <ul class="menu-list">
-          <li><a href="./My Page.html">Profile 설정</a></li>
+          <li><a href="./mypage.html">Profile 설정</a></li>
           <li class="present">
-            <a href="./Change Password.html">비밀번호 변경</a>
+            <a href="./changePassword.html">비밀번호 변경</a>
           </li>
         </ul>
       </ul>
       <ul class="purchase-history">
         <h2>Purchase History</h2>
         <ul class="menu-list">
-          <li><a href="./Purchase History.html">구매목록</a></li>
-          <li><a href="./Chat.html">채팅 History</a></li>
+          <li><a href="./purchaseHistory.html">구매목록</a></li>
+          <li><a href="./chatHistory.html">채팅 History</a></li>
         </ul>
       </ul>
       <ul class="side-dropdown-menu">
         <h4>Profile</h4>
-        <li><a href="./Home.html">Profile 설정</a></li>
-        <li><a href="../html/Home.html">비밀번호 변경</a></li>
+        <li><a href="./mypage.html">Profile 설정</a></li>
+        <li><a href="./changePassword.html">비밀번호 변경</a></li>
         <h4>Purchase History</h4>
-        <li><a href="../html/Search.html">구매목록</a></li>
-        <li><a href="../html/Chat.html">채팅 History</a></li>
+        <li><a href="./purchaseHistory.html">구매목록</a></li>
+        <li><a href="./chatHistory.html">채팅 History</a></li>
       </ul>
     </div>
     <form class="password-container">
       <div class="form-group">
         <h2>비밀번호 변경</h2>
         <ul>
-          <li class="text">비밀번호 변경</li>
+          <li class="text">기존 비밀번호 </li>
           <li>
             <input
-              type="input"
-              id="input"
-              name="input"
+              type="password"
+              id="user-password"
+              name="user-password"
               placeholder="  비밀번호를 입력해주세요"
+              required
+            />
+          </li>
+        </ul>
+        <ul>
+          <li class="text">새로운 비밀번호</li>
+          <li>
+            <input
+              type="password"
+              id="new-password"
+              name="new-password"
+              placeholder="새로운 비밀번호를 입력해주세요"
               required
             />
           </li>
@@ -89,19 +102,21 @@
           <li class="text">비밀번호 확인</li>
           <li>
             <input
-              type="check"
-              id="check"
-              name="check"
+              type="password"
+              id="check-password"
+              name="check-password"
               placeholder="  비밀번호를 다시 입력해주세요"
               required
             />
           </li>
         </ul>
-        <button type="submit">비밀번호 변경</button>
+        <button type="submit" id="changepassword-btn">비밀번호 변경</button>
       </div>
     </form>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+  <script src="../js/authorized.js"></script>
+  <script src="../js/changepassword.js"></script>
   </body>
 </html>
