🎨 Style : class명 혹은 href 변경

--- a/assets/html/Search.html
+++ b/assets/html/Search.html
@@ -14,22 +14,19 @@
       <nav>
         <div class="nav-container">
           <a href="/index.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
-            <!-- login 관련 메뉴 -->
             <ul class="menu">
               <li><a href="../html/login.html">Login</a></li>
               <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
-            <ul class="menu before">
-            </ul>
-            <!-- // login 관련 메뉴 -->
+            <ul class="menu before"></ul>
             <ul class="menu2">
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
