--- a/assets/html/passwordSearch.html
+++ b/assets/html/passwordSearch.html
@@ -12,29 +12,30 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/Home.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+          <a href="/index.html">
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <ul class="menu">
-              <li><a href="../html/Login.html">Login</a></li>
-              <li><a href="../html/Sign Up.html">Sign Up</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
+            <ul class="menu before"></ul>
             <ul class="menu2">
-              <li><a href="../html/Home.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/Search.html">Search</a></li>
-              <li><a href="../html/Chat.html">Chat</a></li>
-              <li><a href="../html/About Us.html">About Us</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chatlist.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
-              <li><a href="./assets/html/Login.html">Login</a></li>
-              <li><a href="./assets/html/Sign Up.html">Sign Up</a></li>
-              <li><a href="./assets/html/Home.html">Home</a></li>
-              <li><a href="./assets/html/Shop.html">Shop</a></li>
-              <li><a href="./assets/html/Search.html">Search</a></li>
-              <li><a href="./assets/html/Chat.html">Chat</a></li>
-              <li><a href="./assets/html/About Us.html">About Us</a></li>
+              <li><a href="../html/login.html">Login</a></li>
+              <li><a href="../html/signup.html">Sign Up</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/search.html">Search</a></li>
+              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
