--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -21,11 +21,12 @@
               <li><a href="../html/login.html">Login</a></li>
               <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
+            <ul class="menu before"></ul>
             <ul class="menu2">
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
