--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -29,7 +29,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
