--- a/assets/html/aboutUs.html
+++ b/assets/html/aboutUs.html
@@ -14,7 +14,7 @@
       <nav>
         <div class="nav-container">
           <a href="/index.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <!-- login 관련 메뉴 -->
@@ -29,7 +29,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
@@ -71,17 +71,6 @@
             </li>
           </ul>
         </ul>
-      </ul>
-      <ul class="side-dropdown-menu">
-        <h4>프로젝트 기획</h4>
-        <li class="present"><a href="./About Us.html">JoongoBooks란?</a></li>
-        <li><a href="./joongoReaders.html">Joongo-Readers 소개</a></li>
-        <a href="./fna.html">F&A</a>
-        <h4>1:1 문의하기</h4>
-        <li><a href="./report.html">불량 판매자 신고</a></li>
-        <li>
-          <a href="./complain.html">이용 불편 사항 신고</a>
-        </li>
       </ul>
     </div>
     <div class="joongobooks">
