--- a/assets/html/Chat.html
+++ b/assets/html/Chat.html
@@ -4,63 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/chat.css">
-    <title></title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/chat.css" />
+    <title>Chat-History</title>
   </head>
 
   <body>
     <header class="navbar">
-      <nav>
-        <div class="nav-container">
-          <a href="/index.html">
-            <img class="logo" src="../img/books.png" alt="logo" />
-          </a>
-          <div class="menu-container">
-            <ul class="menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-            </ul>
-            <ul class="menu2">
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
+        <nav>
+          <div class="nav-container">
+            <a href="/index.html">
+              <img class="logo" src="../img/books.png" alt="logo" />
+            </a>
+            <div class="menu-container">
+              <ul class="menu">
+                <li><a href="../html/login.html">Login</a></li>
+                <li><a href="../html/signup.html">Sign Up</a></li>
+              </ul>
+              <ul class="menu before"></ul>
+              <ul class="menu2">
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="../html/shop.html">Shop</a></li>
+                <li><a href="../html/search.html">Search</a></li>
+                <li><a href="../html/chatlist.html">Chat</a></li>
+                <li><a href="../html/aboutUs.html">About Us</a></li>
+              </ul>
+              <ul class="dropdown-menu">
+                <li><a href="../html/login.html">Login</a></li>
+                <li><a href="../html/signup.html">Sign Up</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="../html/Shop.html">Shop</a></li>
+                <li><a href="../html/search.html">Search</a></li>
+                <li><a href="../html/chat.html">Chat</a></li>
+                <li><a href="../html/aboutUs.html">About Us</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
-    </header>
+        </nav>
+      </header>
     <section>
-      <h2 class="title">Chat List</h2>
-      <div class="chat-container">
-        <img
-          src="../img/user.png"
-          alt="Profile Picture"
-          class="profile-image"
-        />
-        <div class="chat-details">
-          <div class="nickname">닉네임</div>
-          <div class="content">문의 주신 부분에 대한 답변 드립니다.</div>
+      <div class="chat-title">
+        <h1 class="roomname">채팅방 제목 - 책 이름나올 예정</h1>
+        <button id="chatlist_btn">채팅목록보기</button>
+      </div>
+      <div class="chat-content">
+        <p class="date" id="chat_date">2023년 08월 12일</p>
+        <p class="warning">
+          ※ 경고 ※ <br> 판매 진행 중 또는 계좌이체 후 물품을 보내지 않고 구매 도서 정보를 삭제하는 등의 위반 행위가 있을 경우 즉시 관리자에게 사기 거래 신고 요청을
+          보내주세요.
+        </p>
+        <div class="chat-ms-content">
+          <div id="chat_messages"></div>
         </div>
-        <div class="chat-details2">
-          <div class="time">오전 10:40</div>
-          <div class="chat-count">5</div>
-        </div>
+      </div>
+      <div class="card-footer">
+        <form id="message_form">
+          <input type="text" name="message" class="form-control" autofocus autocomplete="off" >
+        </form>
       </div>
     </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+    <script src="../js/authorized.js"></script>
+    <script src="../js/chat.js"></script>
   </body>
 </html>
