🎨 Style : href 및 class명 수정

--- a/assets/html/Search.html
+++ b/assets/html/Search.html
@@ -44,6 +44,7 @@
     </header>
     <div class="search-container">
       <h1>Search Books</h1>
+      <p>찾고싶으신 중고 도서명을 입력해주세요.</p>
       <form>
         <div class="header_searchGroup">
           <div class="header_search">
