--- a/assets/html/mypage.html
+++ b/assets/html/mypage.html
@@ -14,17 +14,14 @@
       <nav>
         <div class="nav-container">
           <a href="/index.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
-            <!-- login 관련 메뉴 -->
             <ul class="menu">
               <li><a href="../html/login.html">Login</a></li>
               <li><a href="../html/signup.html">Sign Up</a></li>
             </ul>
-            <ul class="menu before">
-            </ul>
-            <!-- // login 관련 메뉴 -->
+            <ul class="menu before"></ul>
             <ul class="menu2">
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
@@ -58,17 +55,9 @@
       <ul class="purchase-history">
         <h2>Purchase History</h2>
         <ul class="menu-list">
-          <li><a href="./purchaseHistory.html">구매목록</a></li>
+          <li><a href="./purchaseHistory.html">찜목록</a></li>
           <li><a href="./chatHistory.html">채팅 History</a></li>
         </ul>
-      </ul>
-      <ul class="side-dropdown-menu">
-        <h4>Profile</h4>
-        <li class="present"><a href="./Home.html">Profile 설정</a></li>
-        <li><a href="../html/Home.html">비밀번호 변경</a></li>
-        <h4>Purchase History</h4>
-        <li><a href="../html/Search.html">구매목록</a></li>
-        <li><a href="../html/Chat.html">채팅 History</a></li>
       </ul>
     </div>
     <div id="user-profile" class="user-profile">
