--- a/assets/html/updatePost.html
+++ b/assets/html/updatePost.html
@@ -29,92 +29,15 @@
               <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
           </div>
         </div>
       </nav>
     </header>
+    <div class="createbook_title">
+      <h1>책 정보 수정하기</h1>
+    </div>
     <section>
-      <div class="left-section">
-        <div class="img-group">
-          <h2>이미지 첨부하기</h2>
-          <input
-            type="file"
-            id="imageInput"
-            accept="image/*"
-            class="fileInput"
-          />
-          <img id="book-cover" class=book-cover src="../img/book-cover.png">
-        </div>
-        <div class="input-group">
-          <button id="attachImageButton">사진 첨부하기</button>
-        </div>
-      </div>
-      <div class="right-section">
-        <form class="form-group">
-          <ul>
-            <li class="input-group">책 제목</li>
-            <li>
-              <input type="text" id="titleInput" />
-            </li>
-            <ul>
-              <li class="input-group">저자</li>
-              <li>
-                <input type="text" id="authorInput" />
-              </li>
-            </ul>
-            <ul>
-              <li class="input-group">출판사</li>
-              <li>
-                <input type="text" id="publisherInput" />
-              </li>
-            </ul>
-            <ul>
-              <li class="select-group">책 상태</li>
-              <li>
-                <select id="actionSelect">
-                  <option value="최상">최상</option>
-                  <option value="상">상</option>
-                  <option value="중">중</option>
-                  <option value="하">하</option>
-                  <option value="최하">최하</option>
-                </select>
-              </li>
-            </ul>
-            <ul>
-              <li class="input-group">정가</li>
-              <li>
-                <input type="text" id="regularPriceInput" />
-              </li>
-            </ul>
-            <ul>
-              <li class="input-group">판매가</li>
-              <li>
-                <input type="text" id="salePriceInput" />
-              </li>
-            </ul>
-            <ul>
-              <li class="input-group">책 상태</li>
-              <li>
-                  <p>
-                      <textarea id="detailInfo" placeholder="예) 첫장에 낙서가 있지만, 그 외에는 다 괜찮습니다."></textarea>
-                  </p>
-              </li>
-          </ul>
-          <div class="button-group">
-              <button type="button" id="reset">초기화</button>
-              <button type="submit" id="register">등록하기</button>
-          </div>
-        </form>
-      </div>
+      
     </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
