--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -14,7 +14,7 @@
       <nav>
         <div class="nav-container">
           <a href="/index.html">
-            <img class="book" src="../img/books.png" alt="logo" />
+            <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
             <!-- login 관련 메뉴 -->
@@ -30,15 +30,6 @@
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
               <li><a href="../html/chatlist.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
@@ -58,7 +49,7 @@
       <ul class="purchase-history">
         <h2>Purchase History</h2>
         <ul class="menu-list">
-          <li><a href="./purchaseHistory.html">구매목록</a></li>
+          <li><a href="./purchaseHistory.html">찜 목록</a></li>
           <li><a href="./chatHistory.html">채팅 History</a></li>
         </ul>
       </ul>
