--- a/assets/html/purchaseHistory.html
+++ b/assets/html/purchaseHistory.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/purchaseHistory.css" />
     <title>purchase-history</title>
   </head>
@@ -45,26 +46,26 @@
       <ul class="profile">
         <h2>Profile</h2>
         <ul class="menu-list">
-          <li><a href="./My Page.html">Profile 설정</a></li>
+          <li><a href="./mypage.html">Profile 설정</a></li>
           <li>
-            <a href="./Change Password.html">비밀번호 변경</a>
+            <a href="./changePassword.html">비밀번호 변경</a>
           </li>
         </ul>
       </ul>
       <ul class="purchase-history">
         <h2>Purchase History</h2>
         <ul class="menu-list">
-          <li class="present"><a href="./Purchase History.html">구매목록</a></li>
-          <li><a href="./Chat History.html">채팅 History</a></li>
+          <li class="present"><a href="./purchaseHistory.html">구매목록</a></li>
+          <li><a href="./chatlist.html">채팅 History</a></li>
         </ul>
       </ul>
       <ul class="side-dropdown-menu">
         <h4>Profile</h4>
-        <li><a href="./Home.html">Profile 설정</a></li>
-        <li><a href="../html/Home.html">비밀번호 변경</a></li>
+        <li><a href="./mypage.html">Profile 설정</a></li>
+        <li><a href="./changePassword.html">비밀번호 변경</a></li>
         <h4>Purchase History</h4>
-        <li class="present"><a href="../html/Search.html">구매목록</a></li>
-        <li><a href="./Chat History.html">채팅 History</a></li>
+        <li class="present"><a href="./purchaseHistory.html">찜 목록</a></li>
+        <li><a href="./chatlist.html">채팅 History</a></li>
       </ul>
     </div>
     <section class="purchase">
@@ -119,5 +120,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+    <script src="../js/authorized.js"></script>
   </body>
 </html>
