--- a/assets/html/bookdetail.html
+++ b/assets/html/bookdetail.html
@@ -29,28 +29,62 @@
               <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
           </div>
         </div>
       </nav>
     </header>
-    <section class="purchase">
-        <div class="book-list">
-          
+    <section>
+      <div class="bookdetail_content">
+        <div class="bookdetail-img">
+          <img id="bookdetail-img" alt="sample">
         </div>
-      </section>
+        <div class="bookdetail-info">
+          <div class="bookdetail-info-text">
+            
+          </div>
+        </div>
+      </div>
+      <div class="conmment-content">
+        <h2>Comment 작성</h2>
+        <div class="comment-form">
+          <form>
+            <label for="comment"></label>
+            <input class="comment-input" type="text" id="comment" name="comment">
+            <button id="comment-btn">댓글달기</button>
+          </form>
+        </div>
+        <div class="comment-list">
+          <h2>Comment 리스트</h2>
+          <div class="comment-detail">
+            <img src="../img/send.png" alt="">
+            <p class="comment-username">user01</p>
+            <ul>
+              <li>멋있어요!</li>
+              <li>2023-09-01</li>
+            </ul>
+            <div class="delete-btn-div">
+              <button class="comment-delete-btn">삭제</button>
+            </div>
+          </div>
+          <div class="recomment-detail">
+            <img src="../img/send.png" alt="">
+            <p class="recomment-username">user01</p>
+            <ul>
+              <li>멋있어요!</li>
+              <li>2023-09-01</li>
+            </ul>
+            <div>
+              <button class="comment-delete-btn">삭제</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
     <script src="../js/bookdetail.js"></script>
+    <script src="../js/comment.js"></script>
   </body>
 </html>
