🐛 Fix : git error 수정

--- a/assets/html/createPost.html
+++ b/assets/html/createPost.html
@@ -29,19 +29,13 @@
               <li><a href="../html/chatlist.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
           </div>
         </div>
       </nav>
     </header>
+    <div class="createbook_title">
+      <h1>책 정보 등록하기</h1>
+    </div>
     <section>
       <div class="left-section">
         <div class="img-group">
@@ -53,9 +47,9 @@
             class="fileInput"
           />
           <img id="book-cover" class=book-cover src="../img/book-cover.png">
-        </div>
-        <div class="input-group">
-          <button id="attachImageButton">사진 첨부하기</button>
+          <div class="input-group">
+            <button id="attachImageButton">사진 첨부하기</button>
+          </div>
         </div>
       </div>
       <div class="right-section">
