--- a/assets/html/mypage_main.html
+++ b/assets/html/mypage_main.html
@@ -47,14 +47,14 @@
       </div>
       <div id="user-profile" class="user-profile">
         <div class="profile_img">
-            <img class="profile img" src="../img/user.png" alt="profile" />
+            <img id="my_profile_img"class="profile img" alt="profile" />
         </div>
         <div class="userinfo">
-          <h2 class="username">UserName</h2>
-          <h4 class="email">user1234@gmail.com</h4>
+          <h2 class="username" id="profile-id"></h2>
+          <h4 id="profile-email" class="profile-email"></h4>
         </div>
         <div class="form-group">
-          <button id="profile-btn" type="submit">프로필 변경</button>
+          <button id="profile-btn" class="profile-btn" type="submit">프로필 생성</button>
         </div>
       </div>
     </section>
