♻️ Refactor : chat -> recommend 수정 및 nickname 추가

--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -26,16 +26,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
@@ -52,6 +43,10 @@
         <ul>
           <li>Email</li>
           <li><input type="email" id="email" name="email" placeholder="  이메일을 입력해주세요"required></li>
+        </ul>
+        <ul>
+          <li>닉네임</li>
+          <li><input type="text" id="user-nickname" name="user-nickname" placeholder="  닉네임을 입력해주세요." required></li>
         </ul>
         <ul>
           <li>비밀번호</li>
