🎨 Style : chat -> recommend 로 menu 수정

--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -26,16 +26,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
@@ -58,9 +49,6 @@
           <div class="question">
             <div class="question-sign">
               <h4>아직 회원가입 전이신가요? <a href="../html/signup.html">  회원가입하기</a></h4>
-            </div>
-            <div class="question-pw"></div>
-              <h4>비밀번호를 잊어버리셨나요? <a href="../html/passwordSearch.html">  비밀번호찾기</a></h4>
             </div>
         </div>
           
