--- a/assets/html/joongoReaders.html
+++ b/assets/html/joongoReaders.html
@@ -29,7 +29,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="introduce-card">
             <div class="cruit-img">
-                <img src="../img/profile-1.png" alt="승겸님profile.png">
+                <img src="../img/profile-4.jpg" alt="승겸님profile.png">
             </div>
             <div class="introduce-content">
                 <ul>
