--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./assets/html/shop.html">Shop</a></li>
               <li><a href="./assets/html/search.html">Search</a></li>
-              <li><a href="./assets/html/chat.html">Chat</a></li>
+              <li><a href="./assets/html/recommend.html">Recommend</a></li>
               <li><a href="./assets/html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
