--- a/assets/html/Shop.html
+++ b/assets/html/Shop.html
@@ -13,7 +13,7 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="/index.html">
+          <a href="../html/authenticationView.html">
             <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
@@ -26,16 +26,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
