--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -29,81 +29,68 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <div class="side-menu">
-      <ul class="profile">
-        <h2>Profile</h2>
-        <ul class="menu-list">
-          <li><a href="./mypage.html">Profile 설정</a></li>
-          <li class="present">
-            <a href="./changePassword.html">비밀번호 변경</a>
-          </li>
+    <section>
+      <div class="side-menu">
+        <ul class="profile">
+          <h2>Profile</h2>
+          <ul class="menu-list">
+            <li><a href="./mypage.html">Profile 설정</a></li>
+            <li class="present">
+              <a href="./changePassword.html">비밀번호 변경</a>
+            </li>
+          </ul>
         </ul>
-      </ul>
-      <ul class="purchase-history">
-        <h2>Purchase History</h2>
-        <ul class="menu-list">
-          <li><a href="./purchaseHistory.html">찜 목록</a></li>
-          <li><a href="./chatHistory.html">채팅 History</a></li>
-        </ul>
-      </ul>
-      <ul class="side-dropdown-menu">
-        <h4>Profile</h4>
-        <li><a href="./mypage.html">Profile 설정</a></li>
-        <li><a href="./changePassword.html">비밀번호 변경</a></li>
-        <h4>Purchase History</h4>
-        <li><a href="./purchaseHistory.html">구매목록</a></li>
-        <li><a href="./chatHistory.html">채팅 History</a></li>
-      </ul>
-    </div>
-    <form class="password-container">
-      <div class="form-group">
-        <h2>비밀번호 변경</h2>
-        <ul>
-          <li class="text">기존 비밀번호 </li>
-          <li>
-            <input
-              type="password"
-              id="user-password"
-              name="user-password"
-              placeholder="  비밀번호를 입력해주세요"
-              required
-            />
-          </li>
-        </ul>
-        <ul>
-          <li class="text">새로운 비밀번호</li>
-          <li>
-            <input
-              type="password"
-              id="new-password"
-              name="new-password"
-              placeholder="새로운 비밀번호를 입력해주세요"
-              required
-            />
-          </li>
-        </ul>
-        <ul>
-          <li class="text">비밀번호 확인</li>
-          <li>
-            <input
-              type="password"
-              id="check-password"
-              name="check-password"
-              placeholder="  비밀번호를 다시 입력해주세요"
-              required
-            />
-          </li>
-        </ul>
-        <button type="submit" id="changepassword-btn">비밀번호 변경</button>
       </div>
-    </form>
+      <form class="password-container">
+        <div class="form-group">
+          <h2>비밀번호 변경</h2>
+          <ul>
+            <li class="text">기존 비밀번호 </li>
+            <li>
+              <input
+                type="password"
+                id="user-password"
+                name="user-password"
+                placeholder="  비밀번호를 입력해주세요"
+                required
+              />
+            </li>
+          </ul>
+          <ul>
+            <li class="text">새로운 비밀번호</li>
+            <li>
+              <input
+                type="password"
+                id="new-password"
+                name="new-password"
+                placeholder="새로운 비밀번호를 입력해주세요"
+                required
+              />
+            </li>
+          </ul>
+          <ul>
+            <li class="text">비밀번호 확인</li>
+            <li>
+              <input
+                type="password"
+                id="check-password"
+                name="check-password"
+                placeholder="  비밀번호를 다시 입력해주세요"
+                required
+              />
+            </li>
+          </ul>
+          <button type="submit" id="changepassword-btn">비밀번호 변경</button>
+        </div>
+      </form>
+    </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
