♻️ Refactor : js파일 type 설정

--- a/assets/html/bookdetail.html
+++ b/assets/html/bookdetail.html
@@ -49,7 +49,7 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/bookdetail.js"></script>
+    <script type="module" src="../js/bookdetail.js"></script>
     <script src="../js/comment.js"></script>
   </body>
 </html>
