--- a/assets/html/createPost.html
+++ b/assets/html/createPost.html
@@ -114,6 +114,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/createpost.js"></script>
+    <script type="module" src="../js/createpost.js"></script>
   </body>
 </html>
