--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -56,6 +56,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/login.js"></script>
+    <script type="module" src="../js/login.js"></script>
   </body>
 </html>
