--- a/assets/html/mypage.html
+++ b/assets/html/mypage.html
@@ -97,6 +97,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/mypage.js"></script>
+    <script type="module" src="../js/mypage.js"></script>
   </body>
 </html>
