--- a/assets/html/mypage_main.html
+++ b/assets/html/mypage_main.html
@@ -62,6 +62,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/mypage_main.js"></script>
+    <script type="module" src="../js/mypage_main.js"></script>
   </body>
 </html>
