--- a/assets/html/search.html
+++ b/assets/html/search.html
@@ -98,6 +98,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/search.js"></script>
+    <script type="module" src="../js/search.js"></script>
   </body>
 </html>
