--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -13,7 +13,7 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/authenticationView.html">
+          <a href="/index.html">
             <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
@@ -75,6 +75,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/shop.js"></script>
+    <script type="module" src="../js/shop.js"></script>
   </body>
 </html>
