--- a/assets/html/updatePost.html
+++ b/assets/html/updatePost.html
@@ -43,6 +43,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script src="../js/authorized.js"></script>
-    <script src="../js/updatePost.js"></script>
+    <script type="module" src="../js/updatePost.js"></script>
   </body>
 </html>
