--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -95,6 +95,6 @@
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
   <script src="../js/authorized.js"></script>
-  <script src="../js/changepassword.js"></script>
+  <script type="module" src="../js/changepassword.js"></script>
   </body>
 </html>
