✨ Feat : 이전 대화내용 가져오기 위한 js 파일 추가

--- a/assets/html/recommend.html
+++ b/assets/html/recommend.html
@@ -70,5 +70,6 @@
     </footer>
     <script src="../js/authorized.js"></script>
     <script type="module" src="../js/recommend.js"></script>
+    <script type="module" src="../js/recommendview.js"></script>
   </body>
 </html>
