♻️ Refactor : front와 back ip 관리를 위해 주소 분리

--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -67,6 +67,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/signup.js"></script>
+    <script type="module" src="../js/signup.js"></script>
   </body>
 </html>
