✨ Feat : 비밀번호 찾기 기능 추가

--- a/assets/html/passwordSearch.html
+++ b/assets/html/passwordSearch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/password.css" />
     <title>비밀번호 변경</title>
   </head>
@@ -32,7 +33,7 @@
               <li><a href="../html/login.html">Login</a></li>
               <li><a href="../html/signup.html">Sign Up</a></li>
               <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
+              <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
               <li><a href="../html/chat.html">Chat</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
@@ -47,15 +48,29 @@
         <div class="form-group">
           <ul>
             <li>아이디 입력</li>
-            <li><input type="text" id="ID" name="ID" placeholder="  아이디를 입력해주세요">  
+            <li>
+              <input type="text" id="ID" name="ID" placeholder="  아이디를 입력해주세요"/>
             </li>
-            <button class="confirm-button" onclick="location.href='./Change Password.html'">확인</button>
-
+            <button class="confirm-button" id="confirm-button" type="button">확인</button>
           </ul>
         </div>
       </form>
+    
+      <form id="password-change-form" style="display: none;">
+        <div class="form-group">
+          <ul>
+            <li>새 비밀번호</li>
+            <li><input type="password" id="new-password" placeholder="  새 비밀번호를 입력해주세요"></li>
+            <li>비밀번호 확인</li>
+            <li><input type="password" id="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"></li>
+            <li><button class="confirm-button" id="change-password-button" type="button">비밀번호 변경</button></li>
+          </ul>
+        </div>
+      </form>
+    </div>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
+    <script src="../js/passwordSearch.js"></script>
   </body>
 </html>
