--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -49,6 +49,7 @@
           <div class="question">
             <div class="question-sign">
               <h4>아직 회원가입 전이신가요? <a href="../html/signup.html">  회원가입하기</a></h4>
+              <h4>비밀번호가 기억나지 않나요? <a href="../html/passwordSearch.html">비밀번호 찾기</a></h4>
             </div>
         </div>
           
