🎨 Style : 비밀번호 찾기 스타일 코드 변경

--- a/assets/html/passwordSearch.html
+++ b/assets/html/passwordSearch.html
@@ -44,7 +44,7 @@
     </header>
     <div class="password-container">
       <h2>비밀번호 찾기</h2>
-      <form>
+      <form id="input-id-form">
         <div class="form-group">
           <ul>
             <li>아이디 입력</li>
@@ -61,8 +61,12 @@
           <ul>
             <li>새 비밀번호</li>
             <li><input type="password" id="new-password" placeholder="  새 비밀번호를 입력해주세요"></li>
+          </ul>
+          <ul>
             <li>비밀번호 확인</li>
             <li><input type="password" id="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"></li>
+          </ul>
+          <ul>
             <li><button class="confirm-button" id="change-password-button" type="button">비밀번호 변경</button></li>
           </ul>
         </div>
