🎨 Style : js type = module 추가

--- a/assets/html/joongoReaders.html
+++ b/assets/html/joongoReaders.html
@@ -142,6 +142,6 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
   </body>
 </html>
