--- a/assets/html/bookdetail.html
+++ b/assets/html/bookdetail.html
@@ -48,7 +48,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/bookdetail.js"></script>
     <script src="../js/comment.js"></script>
   </body>
