--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -94,7 +94,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-  <script src="../js/authorized.js"></script>
+  <script type="module" src="../js/authorized.js"></script>
   <script type="module" src="../js/changepassword.js"></script>
   </body>
 </html>
