--- a/assets/html/createPost.html
+++ b/assets/html/createPost.html
@@ -113,7 +113,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/createpost.js"></script>
   </body>
 </html>
