--- a/assets/html/mypage.html
+++ b/assets/html/mypage.html
@@ -96,7 +96,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/mypage.js"></script>
   </body>
 </html>
