--- a/assets/html/recommend.html
+++ b/assets/html/recommend.html
@@ -68,7 +68,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/recommend.js"></script>
     <script type="module" src="../js/recommendview.js"></script>
   </body>
