--- a/assets/html/search.html
+++ b/assets/html/search.html
@@ -89,7 +89,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/search.js"></script>
   </body>
 </html>
