--- a/assets/html/updatePost.html
+++ b/assets/html/updatePost.html
@@ -42,7 +42,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script type="module" src="../js/updatePost.js"></script>
   </body>
 </html>
