🎨 Style : 비밀번호 변경 UI 변경

--- a/assets/html/changePassword.html
+++ b/assets/html/changePassword.html
@@ -38,18 +38,35 @@
     </header>
     <section>
       <div class="side-menu">
-        <ul class="profile">
-          <h2>Profile</h2>
+        <div class="side-menu-profile">
+          <div class="profile_img">
+            <img id="my_profile_img"class="profile img" alt="profile" />
+          </div>
+          <div class="userinfo">
+            <h2 class="username" id="profile-id"></h2>
+            <p id="aboutme" class="aboutme"></p>
+          </div>
+          <div class="form-group">
+            <button id="profile-btn" class="profile-btn" type="submit">프로필 변경</button>
+          </div>
+        </div>
+        <ul class="history-list">
+          <h2 class="history-list-title">History</h2>
           <ul class="menu-list">
-            <li><a href="./mypage.html">Profile 설정</a></li>
             <li class="present">
-              <a href="./changePassword.html">비밀번호 변경</a>
+              <a href="#">등록한 책 목록</a>
+            </li>
+            <li>
+              <a href="#">찜 목록</a>
+            </li>
+            <li>
+              <a href="#">채팅 목록</a>
             </li>
           </ul>
         </ul>
       </div>
       <form class="password-container">
-        <div class="form-group">
+        <div class="password-group">
           <h2>비밀번호 변경</h2>
           <ul>
             <li class="text">기존 비밀번호 </li>
